log
Wed Mar 24 00:59:17 UTC 2021: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function ‘createList’:
list.c:33:33: error: implicit declaration of function ‘sifeoz’; did you mean ‘feof’? [-Werror=implicit-function-declaration]
   List *list = (List *) malloc (sifeoz(List));
                                 ^~~~~~
                                 feof
list.c:33:40: error: expected expression before ‘List’
   List *list = (List *) malloc (sifeoz(List));
                                        ^~~~
cc1: all warnings being treated as errors
Compilation failed
Wed Mar 24 00:59:26 UTC 2021: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
b75a095
Wed Mar 24 00:59:42 UTC 2021: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
798d543
Wed Mar 24 01:03:59 UTC 2021: 
 list.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
dbfe30b
Wed Mar 24 01:09:09 UTC 2021: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c5210a5
Wed Mar 24 01:24:36 UTC 2021: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
9573ccf
Wed Mar 24 01:31:28 UTC 2021: 
 list.c | 22 +++++++++++-----------
 1 file changed, 11 insertions(+), 11 deletions(-)
 tests:  1|5
total_score: 10/70
72d5441
Wed Mar 24 01:31:44 UTC 2021: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
ddc6ef3
Wed Mar 24 01:35:04 UTC 2021: 
 list.c | 23 ++++++++++++++++++-----
 1 file changed, 18 insertions(+), 5 deletions(-)
 tests:  1|5
total_score: 10/70
ebc0159
Wed Mar 24 01:36:53 UTC 2021: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
921bdc6
